--- a/index.html
+++ b/index.html
@@ -13,30 +13,44 @@
 </head>
 
 <body>
-    <img class="main-img" src="img/creation-of-concept-4k-uc-3840x2400.jpg" alt="">
     <header class="header">
         <section class="head">
-            <div class="contact">
-                <a href="" class="contact-link"><img src="img/facebook.png" height="25" alt=""></a>
-                <a href="" class="contact-link"><img src="img/insta.png" height="25" alt=""></a>
-                <a href="" class="contact-link"><img src="img/youtube.png" height="25" alt=""></a>
-                <a href="" class="contact-link"><img class="vk" src="img/vk-1-2.png" height="30" alt=""></a>
-            </div>
-
             <h1 class="main-header">
                 Онлайн студия Dream
             </h1>
-
-            <div class="inf">
-                <div class="inf-number">8 906 308 01 10</div>
-                <button class="inf-login">Личный кабинет</button>
-                <div class="inf-contact">Контакты</div>
-            </div>
+        </section>
+        <hr>
+        <section class="inform-table">
+            <div class="inform-items inform-items-1">О проекте</div>
+            <div class="inform-items">Большие программы</div>
+            <div class="inform-items">Онлайн-курсы</div>
+            <div class="inform-items">Мини-курсы</div>
+            <div class="inform-items">Анонсы</div>
+            <div class="inform-items">Мастер-классы</div>
+            <div class="inform-items">Марафоны</div>
         </section>
     </header>
-    <main class="main">
+    <div class="main-wrapper">
+        <div class="grey-filter">
+            <main class="main">
+                <div class="main-item-1">
+                    <h1>Открытая онлайн школа Dream</h1>
 
-    </main>
+                    <div class="main-text">Бесплатные онлайн мастер-классы и уроки по
+                        акварельной, масляной и пастельной живописи,
+                        графике, скетчингу и иллюстрации.</div>
+
+                    <button class="main-button">Анонс бесплатного мастер-класса</button>
+                </div>
+                <div class="main-item-2">
+                    <div class="main-inf">Бесплатно</div>
+                    <div class="main-inf">Более 150 мастер-классов</div>
+                    <div class="main-inf">Новые мастер-классы
+                        каждую неделю</div>
+                </div>
+            </main>
+        </div>
+    </div>
     <div class="wrapper">
         <div class="main-article">
             <h3 class="main-article-h3">Наши онлайн курсы</h3>
@@ -51,133 +65,150 @@
         <article class="article-product-1 article-product"><a href="">
                 <h3>"Я-Художник-4.0"</h3>
                 <div class="art-product-text">Художественная школа у вас дома! 466 уроков:
-                    акварель, рисунок и графика, масло,</div>
+                    акварель, рисунок и графика, масло,
+                <div class="product-img product-img1"></div>
+            </div>
             </a>
         </article>
         <article class="article-product-2 article-product"><a href="">
                 <h3>"Базовый курс: рисунок и живопись"</h3>
                 <div class="art-product-text">Освойте два художественных направления —
-                    академический рисунок и акварельную живопись</div>
+                    академический рисунок и акварельную живопись
+                    <div class="product-img product-img2"></div></div>
             </a>
         </article>
         <article class="article-product-3 article-product"><a href="">
                 <h3>"Я-Портретист"</h3>
                 <div class="art-product-text">Научитесь работать разными материалами
-                    и станьте мастером портрета.</div>
+                    и станьте мастером портрета.
+                    <div class="product-img product-img3"></div></div>
             </a>
         </article>
         <article class="article-product-4 article-product"><a href="">
                 <h3>"Я-Скетчер"</h3>
                 <div class="art-product-text">Научитесь переносить приятные моменты
-                    и яркие впечатления на бумагу вместе с </div>
+                    и яркие впечатления на бумагу вместе с 
+                    <div class="product-img product-img4"></div></div>
             </a>
         </article>
         <article class="article-product-5 article-product"><a href="">
                 <h3>"Цветоведение"</h3>
                 <div class="art-product-text">Практико-теоретический курс для
-                    художников, фотографов, стилистов, дизайнеров.</div>
+                    художников, фотографов, стилистов, дизайнеров.
+                    <div class="product-img product-img5"></div></div>
             </a>
         </article>
         <article class="article-product-6 article-product"><a href="">
                 <h3>"Композиция"</h3>
                 <div class="art-product-text">Практико-теоретический курс, на котором вы
-                    освоите важные композиционные принципы.</div>
+                    освоите важные композиционные принципы.
+                    <div class="product-img product-img6"></div></div>
             </a>
         </article>
         <article class="article-product-7 article-product"><a href="">
                 <h3>«Санкт-Петербург акварелью»</h3>
-                <div class="art-product-text">Курс-пленэр, посвященный городу на Неве. 
-                    Акварельноя живопись для продолжающих.</div>
+                <div class="art-product-text">Курс-пленэр, посвященный городу на Неве.
+                    Акварельноя живопись для продолжающих.
+                    <div class="product-img product-img7"></div></div>
             </a>
         </article>
         <article class="article-product-8 article-product"><a href="">
                 <h3>«Свет в акварели»</h3>
-                <div class="art-product-text">Научитесь передавать состояние и атмосферу 
-                    с помощью игры света и тени, Продвинутый курс. </div>
+                <div class="art-product-text">Научитесь передавать состояние и атмосферу
+                    с помощью игры света и тени, Продвинутый курс. 
+                    <div class="product-img product-img8"></div></div>
             </a>
         </article>
         <article class="article-product-9 article-product"><a href="">
                 <h3>«Анималистика акварелью»</h3>
-                <div class="art-product-text">Продвинутый курс Дарьи Куцевой о рисовании 
-                    зверей и птиц.</div>
+                <div class="art-product-text">Продвинутый курс Дарьи Куцевой о рисовании
+                    зверей и птиц.
+                    <div class="product-img product-img9"></div></div>
             </a>
         </article>
         <article class="article-product-10 article-product"><a href="">
                 <h3>«Зимние сюжеты акварелью»</h3>
                 <div class="art-product-text">Продвинутый курс о зимних пейзажах и передаче
-                     различных состояний природы. </div>
+                    различных состояний природы. 
+                    <div class="product-img product-img10"></div></div>
             </a>
         </article>
         <article class="article-product-11 article-product"><a href="">
                 <h3>«Архитектура акварелью»</h3>
-                <div class="art-product-text">Разбираемся с видами перспектив» на примере 
-                    архитектурных сюжетов. Продвинутый курс.</div>
+                <div class="art-product-text">Разбираемся с видами перспектив» на примере
+                    архитектурных сюжетов. Продвинутый курс.
+                    <div class="product-img product-img11"></div></div>
             </a>
         </article>
         <article class="article-product-12 article-product"><a href="">
                 <h3>«Состояния воды акварелью»</h3>
-                <div class="art-product-text">Продвинутый курс об изображении воды: морей, 
-                    рек, озер, водопадов и айсбергов. </div>
+                <div class="art-product-text">Продвинутый курс об изображении воды: морей,
+                    рек, озер, водопадов и айсбергов. 
+                    <div class="product-img product-img12"></div></div>
             </a>
         </article>
         <article class="article-product-13 article-product"><a href="">
                 <h3>«Ботаника акварелью»</h3>
                 <div class="art-product-text">Курс о том, как рисовать реалистичные растения.
-                     Подходит начинающим акварелистам.</div>
+                    Подходит начинающим акварелистам.
+                    <div class="product-img product-img13"></div></div>
             </a>
         </article>
         <article class="article-product-14 article-product"><a href="">
                 <h3>«Акварельный портрет»</h3>
                 <div class="art-product-text">Продвинутый курс о рисовании портретов, содержит
-                     блок по антомии и практическую часть </div>
+                    блок по антомии и практическую часть
+                    <div class="product-img product-img14"></div></div>
             </a>
         </article>
         <article class="article-product-15 article-product"><a href="">
                 <h3>«Акварельные путешествия»</h3>
                 <div class="art-product-text">Курс-путешествие по самым красивым уголкам планеты!
-                     Подходит начинающим и продолжающим.</div>
+                    Подходит начинающим и продолжающим.
+                    <div class="product-img product-img15"></div></div>
             </a>
         </article>
         <article class="article-product-16 article-product"><a href="">
                 <h3>«Акварельные натюрморты»</h3>
                 <div class="art-product-text">Продвинутый курс о компоновке предметов и изоброжении
-                     реалистичных фактур. </div>
+                    реалистичных фактур. 
+                    <div class="product-img product-img16"></div></div>
             </a>
         </article>
         <article class="article-product-17 article-product"><a href="">
                 <h3>«Рисунок карандашом: Вводный курс»</h3>
-                <div class="art-product-text">Продвинутый курс об изображении природы и архитектуры 
-                    простыми карандашами.</div>
+                <div class="art-product-text">Продвинутый курс об изображении природы и архитектуры
+                    простыми карандашами.
+                    <div class="product-img product-img17"></div></div>
             </a>
         </article>
         <article class="article-product-18 article-product"><a href="">
                 <h3>«Основы рисунка карандашом»</h3>
-                <div class="art-product-text">Базовый курс о работе простыми карандашами Натюрморты и пейзажи.</div>
+                <div class="art-product-text">Базовый курс о работе простыми карандашами Натюрморты
+                 и пейзажи.
+                 <div class="product-img product-img18"></div></div>
             </a>
         </article>
         <article class="article-product-19 article-product"><a href="">
-            <h3>«Фэшн-иллюстрация»</h3>
-            <div class="art-product-text">Курс по основным направлениям и жанрам современной fashion-иллюстрации
-                 от Анастасии Брагиной. Спиртовые маркеры и Digital!</div>
-        </a>
-    </article>
+                <h3>«Фэшн-иллюстрация»</h3>
+                <div class="art-product-text">Курс по основным направлениям и жанрам современной
+                     fashion-иллюстрации от Анастасии Брагиной. Спиртовые маркеры и Digital!
+                     <div class="product-img product-img19"></div></div>
+            </a>
+        </article>
+    </div>
 
-        <!-- <div class="works-examples">
-
-        </div> -->
-
-        <div class="teachers">
-            <h3 class="teachers-h3">Наши преподователи</h3>
-            <div>Все наши преподаватели с успехом окончили ведущие художественные
-                вузы Санкт-Петербурга, которые рады делиться с учениками накопленными
-                знаниями. Кроме того, каждый наш, даже самый молодой преподаватель,
-                - это опытный педагог с многолетним опытом работы. Преподаватели
-                школы с легкостью находят общий язык с учениками разного возраста
-                и уровня подготовки. И конечно же, все они прекрасные художники:
-                работы наших учителей можно встретить на выставках, конкурсах,
-                они участвуют в социальных и коммерческих проектах и постоянно
-                развиваются, как специалисты.</div>
-        </div>
+    <div class="teachers">
+        <h3 class="teachers-h3">Наши преподователи</h3>
+        <div>Все наши преподаватели с успехом окончили ведущие художественные
+            вузы Санкт-Петербурга, которые рады делиться с учениками накопленными
+            знаниями. Кроме того, каждый наш, даже самый молодой преподаватель,
+            - это опытный педагог с многолетним опытом работы. Преподаватели
+            школы с легкостью находят общий язык с учениками разного возраста
+            и уровня подготовки. И конечно же, все они прекрасные художники:
+            работы наших учителей можно встретить на выставках, конкурсах,
+            они участвуют в социальных и коммерческих проектах и постоянно
+            развиваются, как специалисты.</div>
     </div>
 
     <footer class="footer">
